fix(main): normalize spacing of sections and cardlists

--- a/src/components/Organisms/Footer/Footer.css
+++ b/src/components/Organisms/Footer/Footer.css
@@ -6,6 +6,7 @@
 @value copy from fonts;
 
 .siteFooter {
+  margin-top: 2rem;
   background: grayLighter;
   clear: both;
 }
